# ruin

ruin/: DESIGN  Demo.hs  LICENSE  ruin.cabal
ruin/Data/: Ruin.hs
ruin/Data/Ruin/: All.hs  Ancillaries.hs  ClosedHas.hs  Core.hs  Deep.hs  Eval.hs  Fieldwise.hs  Hide.hs  Hoid.hs  Internal.hs  QQ.hs  R.hs  TH.hs
ruin/Data/Ruin/QQ/: Parser.hs
ruin/test/: MustNotCompile.hs  StrictCheck.hs  Strictness.hs  StrictnessTypes.hs  Test.hs  XY.hs
ruin/test/MustCompile/: CLO.hs  ClosedHas.hs  HRDatabase.hs  Physics.hs  PrintAndTime.hs  RNA.hs  RSplat.hs  RSplit.hs  TH.hs
ruin/test/Test/: R.hs  RNA.hs
