name: ruin
version: 0.1.0.1
synopsis: Pliable records
description:
  @ruin@ is a DSL for working with record types. It focuses on
  converting between conventionally-declared record types and
  supporting named function arguments.
  .
  * Uses @-XOverloadedLabels@, so that @#x@ is a first-class label for
    the field named @x@.
  * Provides @GHC.Generics@ defaults.
  * Named arguments: @\\[rna|x y z] -> (x,y,z)@ inhabits @("x" :\@ a,"y"
    :\@ b,"z" :\@ c) -> (a,b,c)@.
  * Relies on @-XDuplicateRecordFields@; the generic defaults only
    work if record selector names do not have distinguishing prefices.
  * Custom type errors, such as @ruin: Could not find the field \`x\'
    in the type ...@
  * "Data.Ruin.R" provides anonymous record types where the order of
    fields is irrelevant.
  .
  See the "Data.Ruin" module for an overview.
license: BSD3
license-file: LICENSE
author: Nicolas Frisby
maintainer: nicolas.frisby@gmail.com
copyright: 2016 Nicolas Frisby
category: Data, Records
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/nfrisby/ruin.git

flag werror
  description: Enable -Werror
  default: False
  manual: True

library
  exposed-modules:
    Data.Ruin
    Data.Ruin.Ancillaries
    Data.Ruin.ClosedHas
    Data.Ruin.Core
    Data.Ruin.Deep
    Data.Ruin.Eval
    Data.Ruin.R
  other-modules:
    Data.Ruin.All
    Data.Ruin.Fieldwise
    Data.Ruin.Hide
    Data.Ruin.Hoid
    Data.Ruin.Internal
    Data.Ruin.QQ
    Data.Ruin.QQ.Parser
    Data.Ruin.TH
  build-depends:
      base >= 4.9 && <= 5
    , binary
    , cereal
    , deepseq
    , ghc-prim
    , parsec
    , template-haskell
    , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(werror)
    ghc-options: -Werror

test-suite test
  hs-source-dirs: test
  main-is: Test.hs
  type: exitcode-stdio-1.0
  build-depends:
      base
    , ruin
    , hspec
    , lens
    , mtl
    , optparse-applicative
    , should-not-typecheck
    , smallcheck
    , template-haskell
  other-modules:
    MustCompile.ClosedHas
    MustCompile.HRDatabase
    MustCompile.Physics
    MustCompile.PrintAndTime
    MustCompile.RNA
    MustCompile.RSplat
    MustCompile.RSplit
    MustCompile.TH
    MustNotCompile
    StrictCheck
    Strictness
    StrictnessTypes
    Test.R
    Test.RNA
    XY
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(werror)
    ghc-options: -Werror
